tests/badly_positioned_make_exactt/badly_positioned_make_exactt.exp
Error ----------------------------------------------------------------------------------------------------- test.js:17:2

Cannot create `X` element because: [incompatible-use]
 - Either property `x` is missing in props [1] but exists in `RequiredProps` [2].
 - Or property `y` is missing in props [1] but exists in `RequiredProps1` [3].

   test.js:17:2
   17| <X />;
        ^

References:
   test.js:17:1
   17| <X />;
       ^^^^^ [1]
   test.js:11:28
   11| export type Props<ItemT> = RequiredProps<ItemT> & RequiredProps1;
                                  ^^^^^^^^^^^^^^^^^^^^ [2]
   test.js:11:51
   11| export type Props<ItemT> = RequiredProps<ItemT> & RequiredProps1;
                                                         ^^^^^^^^^^^^^^ [3]



Found 1 error
